--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,43 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.btn {
+    @apply rounded disabled:opacity-75 inline-flex justify-center items-center;
+}
+
+.btn-white {
+    @apply text-gray-600 bg-white;
+}
+
+.btn-blue {
+    @apply bg-blue-600 text-blue-50;
+}
+
+.btn-red {
+    @apply bg-red-600 text-red-50;
+}
+
+.btn-green {
+    @apply bg-green-600 text-green-50;
+}
+
+.btn-yellow {
+    @apply bg-yellow-400 text-yellow-50;
+}
+
+.btn-gray {
+    @apply bg-gray-600 text-gray-50;
+}
+
+.btn-sm {
+    @apply text-sm py-1 px-2;
+}
+
+.btn-md {
+    @apply text-base px-4 py-2;
+}
+
+.btn-lg {
+    @apply text-lg px-6 py-4;
+}
